--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
       height: 100%;
       width: 0;
       background-color: #00ff00;
-      animation: fill 3s linear forwards;
+      /* Commented out to test if it affects the issue */
+      /* animation: fill 3s linear forwards; */
     }
     #loading-text {
       font-size: 24px;
@@ -1040,3 +1041,4 @@
   </script>
 </body>
 </html>
+
