--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             "level1/redtshirt.png"
         ],
         2: [
-            "level2/broken guitar.png",
+            "level2/broken%20guitar.png",  # URL-encoded space
             "level2/brokenbtl.png",
             "level2/greentshirt.png",
             "level2/sticker.png",
@@ -329,8 +329,7 @@
     # LOADING SCREEN UTILS
     # -------------------------------------------------
     assets_loaded = 0
-    # Correct total_assets calculation based on unique assets
-    total_assets = 3 + sum(len(imgs) for imgs in level_image_paths.values())  # spaceship, title, boss + level images
+    total_assets = 18  # 3 primary assets + 5 level1 + 5 level2 + 5 level3 = 18
 
     # Define critical assets
     critical_assets = [
@@ -367,30 +366,72 @@
     # Bind load events for all images with unique identifiers
     for lvl, imgs in level_images.items():
         for img, path in zip(imgs, level_image_paths[lvl]):
-            def handle_load(e, path=path):
+            def handle_level_load(e, path=path):
+                print(f"{path} loaded successfully")
                 asset_loaded(f"loaded:{path}")
-            def handle_error(e, path=path):
+            def handle_level_error(e, path=path):
+                print(f"Failed to load {path}")
                 asset_loaded(f"failed:{path}")
             
-            img.bind("load", handle_load)
-            img.bind("error", handle_error)
+            img.bind("load", handle_level_load)
+            img.bind("error", handle_level_error)
             
             # If the image is already loaded (cached), manually call asset_loaded
             if img.complete:
                 if img.naturalWidth != 0:
+                    print(f"{path} was already loaded")
                     asset_loaded(f"loaded:{path}")
                 else:
+                    print(f"{path} failed to load initially")
                     asset_loaded(f"failed:{path}")
 
     # Bind load events for primary images
-    spaceship_img.bind("load", lambda e: asset_loaded("loaded:car.png"))
-    spaceship_img.bind("error", lambda e: asset_loaded("failed:car.png"))
+    def handle_car_load(event):
+        print("car.png loaded successfully")
+        asset_loaded("loaded:car.png")
 
-    title_img.bind("load", lambda e: asset_loaded("loaded:title.gif"))
-    title_img.bind("error", lambda e: asset_loaded("failed:title.gif"))
+    def handle_car_error(event):
+        print("Failed to load car.png")
+        asset_loaded("failed:car.png")
 
-    boss_img.bind("load", lambda e: asset_loaded("loaded:boss.png"))
-    boss_img.bind("error", lambda e: asset_loaded("failed:boss.png"))
+    def handle_boss_load(event):
+        print("boss.png loaded successfully")
+        asset_loaded("loaded:boss.png")
+
+    def handle_boss_error(event):
+        print("Failed to load boss.png")
+        asset_loaded("failed:boss.png")
+
+    def handle_title_load(event):
+        print("title.gif loaded successfully")
+        asset_loaded("loaded:title.gif")
+
+    def handle_title_error(event):
+        print("Failed to load title.gif")
+        asset_loaded("failed:title.gif")
+
+    spaceship_img.bind("load", handle_car_load)
+    spaceship_img.bind("error", handle_car_error)
+
+    boss_img.bind("load", handle_boss_load)
+    boss_img.bind("error", handle_boss_error)
+
+    title_img.bind("load", handle_title_load)
+    title_img.bind("error", handle_title_error)
+
+    # If images are already loaded (cached), manually call asset_loaded
+    for img, path in [
+        (spaceship_img, "car.png"),
+        (boss_img, "boss.png"),
+        (title_img, "title.gif")
+    ]:
+        if img.complete:
+            if img.naturalWidth != 0:
+                print(f"{path} was already loaded")
+                asset_loaded(f"loaded:{path}")
+            else:
+                print(f"{path} failed to load initially")
+                asset_loaded(f"failed:{path}")
 
     def show_title_screen():
         print("Showing title screen")
@@ -460,6 +501,7 @@
             showing_level_title = False
             ENEMY_SPEED = 1.5 + level
             game_over = False
+            game_started = True
             level_start_time = window.Date.new().getTime()
 
             # Set music for the new level
