--- a/index.html
+++ b/index.html
@@ -445,58 +445,42 @@
                     HEIGHT // 1.3 + 30 * i
                 )
 
-    def draw_level_title():
+    # -------------------
+    # NEW LEVEL 1 SCREEN
+    # -------------------
+    def draw_level1_screen():
+        """Draws the Level 1 introductory screen."""
         ctx.clearRect(0, 0, WIDTH, HEIGHT)
         move_stars()
         draw_stars()
-        ctx.fillStyle = "yellow"
+        ctx.fillStyle = "cyan"
         ctx.font = "bold 48px 'Press Start 2P'"
         ctx.textAlign = "center"
-        if level > MAX_LEVELS:
-            ctx.fillText("Final Boss!", WIDTH // 2, HEIGHT // 2)
-        else:
-            ctx.fillText(f"Level {level}", WIDTH // 2, HEIGHT // 2)
+        ctx.fillText("Level 1", WIDTH // 2, HEIGHT // 2 - 30)
+        ctx.font = "24px 'Press Start 2P'"
+        ctx.fillText("Get ready to blast the enemies!", WIDTH // 2, HEIGHT // 2 + 30)
 
-        window.setTimeout(initialize_game, 1000)
+        # After 2 seconds, start the game
+        window.setTimeout(start_level1, 2000)
 
-    def draw_final_score():
-        ctx.clearRect(0, 0, WIDTH, HEIGHT)
-        move_stars()
-        draw_stars()
-        ctx.fillStyle = "white"
-        ctx.font = "48px 'Press Start 2P'"
-        ctx.textAlign = "center"
-        ctx.fillText(f"Final Score: {score}", WIDTH // 2, HEIGHT // 2)
+    def start_level1():
+        """Starts Level 1 by initializing the game."""
+        global showing_level1_screen
+        showing_level1_screen = False
+        initialize_game()
 
-        if high_score_updated:
-            ctx.fillText("New High Score!", WIDTH // 2, HEIGHT // 1.7)
-            show_high_score_prompt()
-        else:
-            window.setTimeout(reset_game, 3000)
-
-    def show_high_score_prompt():
-        high_score_modal.style.display = "block"
-        player_name_input.focus()
-
-    def hide_high_score_prompt():
-        high_score_modal.style.display = "none"
-        player_name_input.value = ""
-
-    def draw_stars():
-        ctx.fillStyle = "white"
-        for star in stars:
-            ctx.fillRect(star["x"], star["y"], star["size"], star["size"])
-
-    def move_stars():
-        for star in stars:
-            star["y"] += 1
-            if star["y"] > HEIGHT:
-                star["y"] = 0
-                star["x"] = window.Math.random() * WIDTH
+    def start_game():
+        """Triggered when the player presses Space to start the game."""
+        global showing_level_title, game_started, showing_level1_screen
+        showing_level_title = False  # Ensure Level Title is not shown
+        showing_level1_screen = True  # Show Level 1 Screen
+        game_started = True
+        # Removed initialize_game() to allow Level 1 screen to handle it
 
     def draw():
         global game_over, game_started, showing_level_title
         global showing_high_score_prompt, showing_final_score, final_score_scheduled
+        global showing_level1_screen  # Added: Reference to new flag
 
         ctx.clearRect(0, 0, WIDTH, HEIGHT)
         move_stars()
@@ -511,6 +495,8 @@
 
         if not game_started:
             draw_start_screen()
+        elif showing_level1_screen:  # Added: Check for Level 1 screen
+            draw_level1_screen()
         elif showing_level_title:
             draw_level_title()
         elif showing_final_score:
@@ -586,6 +572,11 @@
             # Level up if no enemies remain
             if len(enemies) == 0 and level <= MAX_LEVELS and not game_over:
                 level_up()
+
+    # -------------------
+    # LEVEL 1 FUNCTIONS
+    # -------------------
+    # (Added above as draw_level1_screen and start_level1)
 
     def show_final_score():
         global high_score_updated, showing_high_score_prompt, showing_final_score
@@ -697,7 +688,7 @@
         global game_over, score, game_started, showing_level_title
         global ENEMY_SPEED, boss_hits, boss_direction
 
-        if game_over or not game_started or showing_level_title:
+        if game_over or not game_started or showing_level_title or showing_level1_screen:
             return
 
         # Move player bullets
@@ -798,14 +789,14 @@
 
         draw()
 
-    # -------------
+    # -----------
     # ENEMY SHOOTING
-    # -------------
+    # -----------
     def enemy_shoot():
         global game_over, game_started, showing_level_title
         global boss_last_laser, boss_last_diagonal_shot
 
-        if game_over or not game_started or showing_level_title:
+        if game_over or not game_started or showing_level_title or showing_level1_screen:
             return
 
         if level <= MAX_LEVELS:
@@ -862,11 +853,11 @@
     # START GAME
     # -----------
     def start_game():
-        global showing_level_title, game_started
-        showing_level_title = True  # <--- Added: Show Level 1 screen
+        global showing_level_title, game_started, showing_level1_screen
+        showing_level_title = False  # <--- Ensure Level Title is not shown
+        showing_level1_screen = True  # <--- Show Level 1 Screen
         game_started = True
-        # Removed initialize_game() to allow draw_level_title to handle it
-        # This ensures the Level 1 screen is displayed before the game starts
+        # Removed initialize_game() to allow Level 1 screen to handle it
 
     def move_player(event):
         global game_started, game_over, player_last_shot
@@ -876,7 +867,7 @@
             if not game_started:
                 # Start the game from the title screen
                 start_game()
-            elif not showing_level_title and not game_over:
+            elif not showing_level_title and not game_over and not showing_level1_screen:
                 # Fire bullet if not on cooldown
                 if current_time - player_last_shot > player_shot_cooldown:
                     bullets.append([
@@ -888,7 +879,7 @@
             elif game_over:
                 # Reset to title screen
                 reset_game()
-        elif game_started and not showing_level_title and not game_over:
+        elif game_started and not showing_level_title and not game_over and not showing_level1_screen:
             # Left arrow
             if event.keyCode == 37 and player_pos[0] > 0:
                 player_pos[0] -= PLAYER_SPEED
@@ -929,7 +920,7 @@
 
     # Title screen animation
     def animate_title_screen():
-        if not game_started:
+        if not game_started and not showing_level1_screen:
             draw_start_screen()
             window.requestAnimationFrame(lambda x: animate_title_screen())
 
@@ -941,6 +932,30 @@
 
     # Start
     show_loading_screen()
+
+    # -------------------
+    # NEW FUNCTIONS ADDED
+    # -------------------
+    def draw_level1_screen():
+        """Draws the Level 1 introductory screen."""
+        ctx.clearRect(0, 0, WIDTH, HEIGHT)
+        move_stars()
+        draw_stars()
+        ctx.fillStyle = "cyan"
+        ctx.font = "bold 48px 'Press Start 2P'"
+        ctx.textAlign = "center"
+        ctx.fillText("Level 1", WIDTH // 2, HEIGHT // 2 - 30)
+        ctx.font = "24px 'Press Start 2P'"
+        ctx.fillText("Get ready to blast the enemies!", WIDTH // 2, HEIGHT // 2 + 30)
+
+        # After 2 seconds, start the game
+        window.setTimeout(start_level1, 2000)
+
+    def start_level1():
+        """Starts Level 1 by initializing the game."""
+        global showing_level1_screen
+        showing_level1_screen = False
+        initialize_game()
 
   </script>
 </body>
