--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>No Matter Blaster</title>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/brython@3.9.5/brython.min.js"></script>
   <style>
+    /* Existing styles remain unchanged */
     body {
       text-align: center;
       background-color: black;
@@ -190,6 +191,9 @@
     level_start_time = 0
     top_scores = []
     high_score_updated = False
+
+    # **Added Variable: showing_level1_screen**
+    showing_level1_screen = False
 
     # Positions
     player_pos = [WIDTH // 2, HEIGHT - 2 * PLAYER_SIZE]
@@ -445,9 +449,7 @@
                     HEIGHT // 1.3 + 30 * i
                 )
 
-    # -------------------
-    # NEW LEVEL 1 SCREEN
-    # -------------------
+    # **Added Function: draw_level1_screen()**
     def draw_level1_screen():
         """Draws the Level 1 introductory screen."""
         ctx.clearRect(0, 0, WIDTH, HEIGHT)
@@ -463,20 +465,63 @@
         # After 2 seconds, start the game
         window.setTimeout(start_level1, 2000)
 
+    # **Added Function: start_level1()**
     def start_level1():
         """Starts Level 1 by initializing the game."""
         global showing_level1_screen
         showing_level1_screen = False
         initialize_game()
 
-    def start_game():
-        """Triggered when the player presses Space to start the game."""
-        global showing_level_title, game_started, showing_level1_screen
-        showing_level_title = False  # Ensure Level Title is not shown
-        showing_level1_screen = True  # Show Level 1 Screen
-        game_started = True
-        # Removed initialize_game() to allow Level 1 screen to handle it
+    def draw_level_title():
+        ctx.clearRect(0, 0, WIDTH, HEIGHT)
+        move_stars()
+        draw_stars()
+        ctx.fillStyle = "yellow"
+        ctx.font = "bold 48px 'Press Start 2P'"
+        ctx.textAlign = "center"
+        if level > MAX_LEVELS:
+            ctx.fillText("Final Boss!", WIDTH // 2, HEIGHT // 2)
+        else:
+            ctx.fillText(f"Level {level}", WIDTH // 2, HEIGHT // 2)
 
+        window.setTimeout(initialize_game, 1000)
+
+    def draw_final_score():
+        ctx.clearRect(0, 0, WIDTH, HEIGHT)
+        move_stars()
+        draw_stars()
+        ctx.fillStyle = "white"
+        ctx.font = "48px 'Press Start 2P'"
+        ctx.textAlign = "center"
+        ctx.fillText(f"Final Score: {score}", WIDTH // 2, HEIGHT // 2)
+
+        if high_score_updated:
+            ctx.fillText("New High Score!", WIDTH // 2, HEIGHT // 1.7)
+            show_high_score_prompt()
+        else:
+            window.setTimeout(reset_game, 3000)
+
+    def show_high_score_prompt():
+        high_score_modal.style.display = "block"
+        player_name_input.focus()
+
+    def hide_high_score_prompt():
+        high_score_modal.style.display = "none"
+        player_name_input.value = ""
+
+    def draw_stars():
+        ctx.fillStyle = "white"
+        for star in stars:
+            ctx.fillRect(star["x"], star["y"], star["size"], star["size"])
+
+    def move_stars():
+        for star in stars:
+            star["y"] += 1
+            if star["y"] > HEIGHT:
+                star["y"] = 0
+                star["x"] = window.Math.random() * WIDTH
+
+    # **Modified draw() Function to Handle Level 1 Screen**
     def draw():
         global game_over, game_started, showing_level_title
         global showing_high_score_prompt, showing_final_score, final_score_scheduled
@@ -572,11 +617,6 @@
             # Level up if no enemies remain
             if len(enemies) == 0 and level <= MAX_LEVELS and not game_over:
                 level_up()
-
-    # -------------------
-    # LEVEL 1 FUNCTIONS
-    # -------------------
-    # (Added above as draw_level1_screen and start_level1)
 
     def show_final_score():
         global high_score_updated, showing_high_score_prompt, showing_final_score
@@ -789,9 +829,9 @@
 
         draw()
 
-    # -----------
+    # -------------
     # ENEMY SHOOTING
-    # -----------
+    # -------------
     def enemy_shoot():
         global game_over, game_started, showing_level_title
         global boss_last_laser, boss_last_diagonal_shot
@@ -853,9 +893,10 @@
     # START GAME
     # -----------
     def start_game():
+        """Triggered when the player presses Space to start the game."""
         global showing_level_title, game_started, showing_level1_screen
-        showing_level_title = False  # <--- Ensure Level Title is not shown
-        showing_level1_screen = True  # <--- Show Level 1 Screen
+        showing_level_title = False  # Ensure Level Title is not shown
+        showing_level1_screen = True  # Show Level 1 Screen
         game_started = True
         # Removed initialize_game() to allow Level 1 screen to handle it
 
@@ -930,33 +971,13 @@
         canvas.style.display = "none"
         window.setTimeout(show_title_screen, 3000)
 
+    # **Added Functions: draw_level1_screen() and start_level1()**
+    # (Already defined above)
+
     # Start
     show_loading_screen()
-
-    # -------------------
-    # NEW FUNCTIONS ADDED
-    # -------------------
-    def draw_level1_screen():
-        """Draws the Level 1 introductory screen."""
-        ctx.clearRect(0, 0, WIDTH, HEIGHT)
-        move_stars()
-        draw_stars()
-        ctx.fillStyle = "cyan"
-        ctx.font = "bold 48px 'Press Start 2P'"
-        ctx.textAlign = "center"
-        ctx.fillText("Level 1", WIDTH // 2, HEIGHT // 2 - 30)
-        ctx.font = "24px 'Press Start 2P'"
-        ctx.fillText("Get ready to blast the enemies!", WIDTH // 2, HEIGHT // 2 + 30)
-
-        # After 2 seconds, start the game
-        window.setTimeout(start_level1, 2000)
-
-    def start_level1():
-        """Starts Level 1 by initializing the game."""
-        global showing_level1_screen
-        showing_level1_screen = False
-        initialize_game()
 
   </script>
 </body>
 </html>
+
